# physarum

./: Cargo.toml  README.md
config/: simulation.ron  species_A.ron  window.ron
config/species/: 0.ron  1.ron
src/: agent.rs  config.rs  const.rs  constants.rs  construct.rs  engine.rs  enums.rs  fvec2.rs  main.rs  param.rs  params.rs  simulation.rs  species.rs  storage.rs  trail.rs  util.rs  vec2.rs
src/config/: mod.rs  simulation.rs  species.rs  window.rs
src/programs/: compute_program.rs  mod.rs  render_program.rs
src/shaders/: render.wgsl  render_agents.wgsl  render_map.wgsl  simulation.wgsl  trail.wgsl  update_agents.wgsl  update_map.wgsl
src/tests/: mod.rs
