[package]
name = "physarum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.0-rc0"
rayon = "*"
serde = "*"
ron = "*"
rand = "0.8"
stackblur = "0.1.0"
glam = "0.21"
wgpu = "0.12"
bytemuck = "1.4"
